--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@nuxtjs/pwa": "^3.0.0-beta.20",
 		"buefy": "^0.8.20",
 		"bulma": "^0.9.0",
+		"geolocator": "^2.1.5",
 		"node-sass": "^4.14.1",
 		"nuxt": "^2.14.1",
 		"sass-loader": "^9.0.3",
